src/test/deca/context/valid/created/get_protected2.deca
//Description :
// Test d'une déclaration de méthode avec paramètre dans une classe
//
// Resultats :
//


class Premiere {

  protected int a = 3;
}

class Second extends Premiere{
  void printA(int a){
  print(a);
  }
}

{}
