src/test/deca/context/invalid/created/bad_type-return4.deca
//Description :
// Test d'un mauvais type de return
//
// Resultats :
// Erreur


class A{
  protected boolean a;

  boolean printA(int a){
  return a;
  }


}
